# Web-Scraping

./: README.md  pyproject.toml
tests/: test_web_scraping.py
web_scraping/: scraper.py
